--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,14 @@ body{
     background-color: #f1efef;
 }
 
-form{
+.user-form{
     width: 600px;
     margin: 100px auto;
     padding: 30px;
     background-color: #fff;
     border-radius: 10px;
+}
+.carousel-item img{
+    height: 600px;
+    object-fit: contain;
 }
